--- a/main.html
+++ b/main.html
@@ -7,20 +7,20 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	<div class="one">
-	<p>First paragraph</p>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient monte</p>
-	<p>Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu</p>
-	<p>Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel nunc,</p>
-    <ul>
-		<li>First Item</li>
-		<li>Second Item</li>
-		<li>Third Item</li>
-		<li>Fourth Item</li>
-		<li>Fifth Item</li>
-	</ul>
-	</div>
+	<article class="one">
+	  <p>First paragraph</p>
+	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+	  <p>Nullam dictum felis eu pede mollis pretium...</p>
+	  <p>Nam eget dui. Etiam rhoncus...</p>
+	  <ul>
+	    <li>First Item</li>
+	    <li>Second Item</li>
+	    <li>Third Item</li>
+	    <li>Fourth Item</li>
+	    <li>Fifth Item</li>
+	  </ul>
+	</article>
+
 	<script type="text/javascript" src="./script.js"></script>
 
 </body>
